--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,11 +10,14 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.10"
+gunicorn = "^22.0.0"
+flask = "^3.0.3"
 
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^7.1.1"
 gunicorn = "^22.0.0"
+flask = "^3.0.3"
 
 [build-system]
 requires = ["poetry-core"]
