--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,12 +12,14 @@ packages = [
 python = "^3.10"
 gunicorn = "^22.0.0"
 flask = "^3.0.3"
+python-dotenv = "^1.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^7.1.1"
 gunicorn = "^22.0.0"
 flask = "^3.0.3"
+python-dotenv = "^1.0.1"
 
 [build-system]
 requires = ["poetry-core"]
